# scipydepr

./: AUTHORS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
scipydepr/special/: __init__.py  cython_special.pyx  special.c  special.py
